BOOKKEEPER-121: Review Hedwig client documentation (breed via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208050 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ BUGFIXES:
 
  BOOKKEEPER-124: build has RAT failures (ivank)
 
+ BOOKKEEPER-121: Review Hedwig client documentation (breed via ivank)
+
  bookkeeper-server/
 
   BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
