BOOKKEEPER-127: Make poms use official zookeeper 3.4.0 (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208109 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,8 @@ BUGFIXES:
  BOOKKEEPER-124: build has RAT failures (ivank)
 
  BOOKKEEPER-121: Review Hedwig client documentation (breed via ivank)
+ 
+ BOOKKEEPER-127: Make poms use official zookeeper 3.4.0 (ivank)
 
  bookkeeper-server/
 
