BOOKKEEPER-120: Review BookKeeper client documentation (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208111 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ BUGFIXES:
  
  BOOKKEEPER-127: Make poms use official zookeeper 3.4.0 (ivank)
 
+ BOOKKEEPER-120: Review BookKeeper client documentation (ivank)
+
  bookkeeper-server/
 
   BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
