--- a/doc/bookkeeperProgrammer.textile
+++ b/doc/bookkeeperProgrammer.textile
@@ -12,253 +12,88 @@ Notice: Licensed under the Apache License, Version 2.0 (the "License");
 
 h1. Abstract
 
-This guide contains detailed information about using BookKeeper for logging. It discusses the basic operations BookKeeper supports, and how to create logs and perform basic read and write operations on these logs.
+This guide contains detailed information about using BookKeeper for write ahead logging. It discusses the basic operations BookKeeper supports, and how to create logs and perform basic read and write operations on these logs. The main classes used by BookKeeper client are "BookKeeper":./apidocs/org/apache/bookkeeper/client/BookKeeper.html and "LedgerHandle":./apidocs/org/apache/bookkeeper/client/LedgerHandle.html. 
 
-h1.  Instantiating BookKeeper.
+BookKeeper is the main client used to create, open and delete ledgers. A ledger is a log file in BookKeeper, which contains a sequence of entries. Only the client which creates a ledger can write to it. A LedgerHandle represents the ledger to the client, and allows the client to read and write entries. When the client is finished writing they can close the LedgerHandle. Once a ledger has been closed, all client who read from it are guaranteed to read the exact same entries in the exact same order. All methods of BookKeeper and LedgerHandle have synchronous and asynchronous versions. Internally the synchronous versions are implemented using the asynchronous.
 
-p. The first step to use BookKeeper is to instantiate a BookKeeper object: 
+h1.  Instantiating BookKeeper
 
- @org.apache.bookkeeper.BookKeeper @ 
+To create a BookKeeper client, you need to create a configuration object and set the address of the ZooKeeper ensemble in use. For example, if you were using @zk1.example.com:2181,zk2.example.com:2181,zk3.example.com:2181@ as your ensemble, you would create the BookKeeper client as follows.
 
-p. There are three BookKeeper constructors: 
+<pre><code>
+ClientConfiguration conf = new ClientConfiguration();
+conf.setZkServers("zk1.example.com:2181,zk2.example.com:2181,zk3.example.com:2181"); 
 
- @public BookKeeper(String servers) throws KeeperException, IOException @ 
+BookKeeper client = new BookKeeper(conf);
+</code></pre>
 
-p. where: 
+It is important to close the client once you are finished working with it. The set calls on ClientConfiguration are chainable, so instead of putting a set* call on a new line as above, it is possible to make a number of calls on the one line. For example;
 
-*  @servers@ is a comma-separated list of ZooKeeper servers. 
+<pre><code>
+ClientConfiguration conf = new ClientConfiguration().setZkServers("localhost:2181").setZkTimeout(5000);
+</code></pre>
 
+There is also a useful shortcut constructor which allows you to pass the zookeeper ensemble string directly to BookKeeper.
+<pre><code>
+BookKeeper client = new BookKeeper("localhost:2181");
+</code></pre>
 
- @public BookKeeper(ZooKeeper zk) throws InterruptedException, KeeperException @ 
+See "BookKeeper":./apidocs/org/apache/bookkeeper/client/BookKeeper.html for the full api.
 
-p. where: 
 
-*  @zk@ is a ZooKeeper object. This constructor is useful when the application also using ZooKeeper and wants to have a single instance of ZooKeeper. 
+h1.  Creating a ledger
 
+p. Before writing entries to BookKeeper, it is necessary to create a ledger. Before creating the ledger you must decide the ensemble size and the quorum size. 
 
- @public BookKeeper(ZooKeeper zk, ClientSocketChannelFactory channelFactory) throws InterruptedException, KeeperException @ 
+p. The ensemble size is the number of Bookies over which entries will be striped. The quorum size is the number of bookies which an entry will be written to. Striping is done in a round robin fashion. For example, if you have an ensemble size of 3 (consisting of bk1, bk2 & bk3), and a quorum of 2, entry 1 will be written to bk1 & bk2, entry 2 will be written to bk2 & bk3, entry 3 will be written to bk3 & bk1 and so on.
 
-p. where: 
+p. Ledgers are also created with a digest type and password. The digest type is used to generate a checksum so that when reading entries we can ensure that the content is the same as what was written. The password is used as an access control mechanism.
 
-*  @zk@ is a ZooKeeper object. This constructor is useful when the application also using ZooKeeper and wants to have a single instance of ZooKeeper. 
-*  @channelFactory@ is a netty channel object ( @org.jboss.netty.channel.socket@ ). 
+p. To create a ledger, with ensemble size 3, quorum size 2, using a CRC to checksum and "foobar" as the password, do the following:
 
+<pre><code>
+LedgerHandle lh = client.createLedger(3, 2, DigestType.CRC32, "foobar");
+</code></pre>
 
-h1.  Creating a ledger. 
+You can now write to this ledger handle. As you probably plan to read the ledger at some stage, now is a good time to store the id of the ledger somewhere. The ledger id is a long, and can be obtained with @lh.getId()@.
 
-p. Before writing entries to BookKeeper, it is necessary to create a ledger. With the current BookKeeper API, it is possible to create a ledger both synchronously or asynchronously. The following methods belong to @org.apache.bookkeeper.client.BookKeeper@ . 
+h1.  Adding entries to a ledger
 
- _Synchronous call:_ 
+p. Once you have obtained a ledger handle, you can start adding entries to it. Entries are simply arrays of bytes. As such, adding entries to the ledger is rather simple.
 
- @public LedgerHandle createLedger(int ensSize, int qSize, DigestType type,  byte passwd[]) throws KeeperException, InterruptedException, IOException, BKException @ 
+<pre><code>
+lh.addEntry("Hello World!".getBytes());
+</code></pre>
 
-p. where: 
+h1.  Closing a ledger
 
-*  @ensSize@ is the number of bookies (ensemble size); 
-*  @qSize@ is the write quorum size; 
-*  @type@ is the type of digest used with entries: either MAC or CRC32. 
-*  @passwd@ is a password that authorizes the client to write to the ledger being created. 
+p. Once a client is done writing, it can closes the ledger. Closing the ledger is a very important step in BookKeeper, as once a ledger is closed, all reading clients are guaranteed to read the same sequence of entries in the same order. Closing takes no parameters. 
 
+<pre><code>
+lh.close();
+</code></pre>
 
-p. All further operations on a ledger are invoked through the @LedgerHandle@ object returned. 
+h1.  Opening a ledger
 
-p. As a convenience, we provide a @createLedger@ with default parameters (3,2,VERIFIABLE), and the only two input parameters it requires are a digest type and a password. 
+To read from a ledger, a client must open it first. To open a ledger you must know its ID, which digest type was used when creating it, and its password. To open the ledger we created above, assuming it has ID 1;
 
- _Asynchronous call:_ 
+<pre><code>
+LedgerHandle lh2 = client.openLedger(1, DigestType.CRC32, "foobar");
+</code></pre>
 
- @public void asyncCreateLedger(int ensSize, int qSize, DigestType type, byte passwd[], CreateCallback cb, Object ctx ) @ 
+You can now read entries from the ledger. Any attempt to write to this handle will throw an exception.
 
-p. The parameters are the same of the synchronous version, with the exception of @cb@ and @ctx@ . @CreateCallback@ is an interface in @org.apache.bookkeeper.client.AsyncCallback@ , and a class implementing it has to implement a method called @createComplete@ that has the following signature: 
+bq. NOTE: Opening a ledger, which another client already has open for writing will prevent that client from writing any new entries to it. If you do not wish this to happen, you should use the openLedgerNoRecovery method. However, keep in mind that without recovery, you lose the guarantees of what entries are in the ledger. You should only use openLedgerNoRecovery if you know what you are doing.
 
- @void createComplete(int rc, LedgerHandle lh, Object ctx); @ 
+h1. Reading entries from a ledger
 
-p. where: 
+p. Now that you have an open ledger, you can read entries from it. You can use @getLastAddConfirmed@ to get the id of the last entry in the ledger.
 
-*  @rc@ is a return code (please refer to @org.apache.bookeeper.client.BKException@ for a list); 
-*  @lh@ is a @LedgerHandle@ object to manipulate a ledger; 
-*  @ctx@ is a control object for accountability purposes. It can be essentially any object the application is happy with. 
-
-
-p. The @ctx@ object passed as a parameter to the call to create a ledger is the one same returned in the callback. 
-
-h1.  Adding entries to a ledger. 
-
-p. Once we have a ledger handle @lh@ obtained through a call to create a ledger, we can start writing entries. As with creating ledgers, we can write both synchronously and asynchronously. The following methods belong to @org.apache.bookkeeper.client.LedgerHandle@ . 
-
- _Synchronous call:_ 
-
- @public long addEntry(byte[] data) throws InterruptedException @ 
-
-p. where: 
-
-*  @data@ is a byte array; 
-
-
-p. A call to @addEntry@ returns the status of the operation (please refer to @org.apache.bookeeper.client.BKDefs@ for a list); 
-
- _Asynchronous call:_ 
-
- @public void asyncAddEntry(byte[] data, AddCallback cb, Object ctx) @ 
-
-p. It also takes a byte array as the sequence of bytes to be stored as an entry. Additionaly, it takes a callback object @cb@ and a control object @ctx@ . The callback object must implement the @AddCallback@ interface in @org.apache.bookkeeper.client.AsyncCallback@ , and a class implementing it has to implement a method called @addComplete@ that has the following signature: 
-
- @void addComplete(int rc, LedgerHandle lh, long entryId, Object ctx); @ 
-
-p. where: 
-
-*  @rc@ is a return code (please refer to @org.apache.bookeeper.client.BKDefs@ for a list); 
-*  @lh@ is a @LedgerHandle@ object to manipulate a ledger; 
-*  @entryId@ is the identifier of entry associated with this request; 
-*  @ctx@ is control object used for accountability purposes. It can be any object the application is happy with. 
-
-
-h1.  Closing a ledger. 
-
-p. Once a client is done writing, it closes the ledger. The following methods belong to @org.apache.bookkeeper.client.LedgerHandle@ . 
-
- _Synchronous close:_ 
-
- @public void close() throws InterruptedException @ 
-
-p. It takes no input parameters. 
-
- _Asynchronous close:_ 
-
- @public void asyncClose(CloseCallback cb, Object ctx) throws InterruptedException @ 
-
-p. It takes a callback object @cb@ and a control object @ctx@ . The callback object must implement the @CloseCallback@ interface in @org.apache.bookkeeper.client.AsyncCallback@ , and a class implementing it has to implement a method called @closeComplete@ that has the following signature: 
-
- @void closeComplete(int rc, LedgerHandle lh, Object ctx) @ 
-
-p. where: 
-
-*  @rc@ is a return code (please refer to @org.apache.bookeeper.client.BKDefs@ for a list); 
-*  @lh@ is a @LedgerHandle@ object to manipulate a ledger; 
-*  @ctx@ is control object used for accountability purposes. 
-
-
-h1.  Opening a ledger. 
-
-p. To read from a ledger, a client must open it first. The following methods belong to @org.apache.bookkeeper.client.BookKeeper@ . 
-
- _Synchronous open:_ 
-
- @public LedgerHandle openLedger(long lId, DigestType type, byte passwd[]) throws InterruptedException, BKException @ 
-
-*  @lId@ is the ledger identifier; 
-*  @type@ is the type of digest used with entries: either MAC or CRC32. 
-*  @passwd@ is a password to access the ledger (used only in the case of @VERIFIABLE@ ledgers); 
-
-
- _Asynchronous open:_ 
-
- @public void asyncOpenLedger(long lId, DigestType type, byte passwd[], OpenCallback cb, Object ctx) @ 
-
-p. It also takes a a ledger identifier and a password. Additionaly, it takes a callback object  @cb@ and a control object @ctx@ . The callback object must implement the @OpenCallback@ interface in @org.apache.bookkeeper.client.AsyncCallback@ , and a class implementing it has to implement a method called @openComplete@ that has the following signature: 
-
- @public void openComplete(int rc, LedgerHandle lh, Object ctx) @ 
-
-p. where: 
-
-*  @rc@ is a return code (please refer to @org.apache.bookeeper.client.BKDefs@ for a list); 
-*  @lh@ is a @LedgerHandle@ object to manipulate a ledger; 
-*  @ctx@ is control object used for accountability purposes. 
-
-p. The two calls above to open a ledger recover the ledger if it has not been closed properly before it reads entries from it. It is also possible to open a ledger and read from it without triggering the recovery process with the following methods of @org.apache.bookkeeper.client.BookKeeper@ . 
-
- _Synchronous open:_ 
-
- @public LedgerHandle openLedgerNoRecovery(long lId, DigestType type, byte passwd[]) throws InterruptedException, BKException @ 
-
-*  @lId@ is the ledger identifier; 
-*  @type@ is the type of digest used with entries: either MAC or CRC32. 
-*  @passwd@ is a password to access the ledger (used only in the case of @VERIFIABLE@ ledgers); 
-
-
- _Asynchronous open:_ 
-
- @public void asyncOpenLedgerNoRecovery(long lId, DigestType type, byte passwd[], OpenCallback cb, Object ctx) @ 
-
-p. It also takes a a ledger identifier and a password. Additionaly, it takes a callback object  @cb@ and a control object @ctx@ . The callback object must implement the @OpenCallback@ interface in @org.apache.bookkeeper.client.AsyncCallback@ , and a class implementing it has to implement a method called @openComplete@ that has the following signature: 
-
- @public void openComplete(int rc, LedgerHandle lh, Object ctx) @ 
-
-p. where: 
-
-*  @rc@ is a return code (please refer to @org.apache.bookeeper.client.BKDefs@ for a list); 
-*  @lh@ is a @LedgerHandle@ object to manipulate a ledger; 
-*  @ctx@ is control object used for accountability purposes. 
-
-h1.  Reading from ledger 
-
-p. Read calls may request one or more consecutive entries. The following methods belong to @org.apache.bookkeeper.client.LedgerHandle@ . 
-
- _Synchronous read:_ 
-
- @public Enumeration<LedgerEntry> readEntries(long firstEntry, long lastEntry) throws InterruptedException, BKException @ 
-
-*  @firstEntry@ is the identifier of the first entry in the sequence of entries to read; 
-*  @lastEntry@ is the identifier of the last entry in the sequence of entries to read. 
-
-
- _Asynchronous read:_ 
-
- @public void asyncReadEntries(long firstEntry, long lastEntry, ReadCallback cb, Object ctx) throws BKException, InterruptedException @ 
-
-p. It also takes a first and a last entry identifiers. Additionaly, it takes a callback object  @cb@ and a control object @ctx@ . The callback object must implement the @ReadCallback@ interface in @org.apache.bookkeeper.client.AsyncCallback@ , and a class implementing it has to implement a method called @readComplete@ that has the following signature: 
-
- @void readComplete(int rc, LedgerHandle lh, Enumeration<LedgerEntry> seq, Object ctx) @ 
-
-p. where: 
-
-*  @rc@ is a return code (please refer to @org.apache.bookeeper.client.BKDefs@ for a list); 
-*  @lh@ is a @LedgerHandle@ object to manipulate a ledger; 
-*  @seq@ is a @Enumeration<LedgerEntry>@ object to containing the list of entries requested; 
-*  @ctx@ is control object used for accountability purposes. 
-
-
-h1.  Deleting a ledger 
-
-p. Once a client is done with a ledger and is sure that nobody will ever need to read from it again, they can delete the ledger. The following methods belong to @org.apache.bookkeeper.client.BookKeeper@ . 
-
- _Synchronous delete:_ 
-
- @public void deleteLedger(long lId) throws InterruptedException, BKException @ 
-
-*  @lId@ is the ledger identifier; 
-
-
- _Asynchronous delete:_ 
-
- @public void asyncDeleteLedger(long lId, DeleteCallback cb, Object ctx) @ 
-
-p. It takes a ledger identifier. Additionally, it takes a callback object  @cb@ and a control object @ctx@ . The callback object must implement the @DeleteCallback@ interface in @org.apache.bookkeeper.client.AsyncCallback@ , and a class implementing it has to implement a method called @deleteComplete@ that has the following signature: 
-
- @void deleteComplete(int rc, Object ctx) @ 
-
-p. where: 
-
-*  @rc@ is a return code (please refer to @org.apache.bookeeper.client.BKDefs@ for a list); 
-*  @ctx@ is control object used for accountability purposes. 
-
-h1.  Reading the last confirmed entry from a ledger 
-
-p. When reading from an open ledger (opening without recovery enables it), it is often necessary to read the last confirmed hint that the writer client writes along with every entry. The general idea is to obtain the hint from a quorum and return the largest value. The following methods belong to @org.apache.bookkeeper.client.BookKeeper@ . 
-
- _Synchronous read:_ 
-
- @public long readLastConfirmed() @ 
-
- _Asynchronous read:_ 
-
- @public void asyncReadLastConfirmed(ReadLastConfirmedComplete cb, Object ctx) @ 
- 
-p. It takes a callback object  @cb@ and a control object @ctx@ . The callback object must implement the @ReadLastConfirmedCallback@ interface in @org.apache.bookkeeper.client.AsyncCallback@ , and a class implementing it has to implement a method called @readLastConfirmedComplete@ that has the following signature: 
-
-@public void readLastConfirmedComplete (int rc, long lastConfirmed, Object ctx) @
-
-p. where: 
-
-*  @rc@ is a return code (please refer to @org.apache.bookeeper.client.BKDefs@ for a list); 
-*  @lastConfirmed@ is the maximum last confirmed hint received among a quorum of bookies; 
-*  @ctx@ is control object used for accountability purposes. 
+<pre><code>
+long lastEntry = lh2.getLastAddConfirmed();
+Enumeration<LedgerEntry> entries = lh2.readEntries(0, 9);
+while (entries.hasMoreElements()) {
+	byte[] bytes = entries.nextElement().getEntry();
+	System.out.println(new String(bytes));
+}
+</code></pre>
