BOOKKEEPER-122: Review BookKeeper server documentation (fpj & ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208123 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,8 @@ BUGFIXES:
  BOOKKEEPER-127: Make poms use official zookeeper 3.4.0 (ivank)
 
  BOOKKEEPER-120: Review BookKeeper client documentation (ivank)
+ 
+ BOOKKEEPER-122: Review BookKeeper server documentation (fpj & ivank)
 
  bookkeeper-server/
 
