BOOKKEEPER-111: Document bookie recovery feature (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208133 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -96,6 +96,8 @@ BUGFIXES:
 
   BOOKKEEPER-62: Bookie can not start when encountering corrupted records (breed via ivank)
 
+  BOOKKEEPER-111: Document bookie recovery feature (ivank)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
