BOOKKEEPER-129: ZK_TIMEOUT typo in client/server configuration (Sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208372 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -98,6 +98,8 @@ BUGFIXES:
 
   BOOKKEEPER-111: Document bookie recovery feature (ivank)
 
+  BOOKKEEPER-129: ZK_TIMEOUT typo in client/server configuration (Sijie via ivank)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
