BOOKKEEPER-130: Add developer KEYS file to svn (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208382 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,6 +17,8 @@ BUGFIXES:
  BOOKKEEPER-120: Review BookKeeper client documentation (ivank)
  
  BOOKKEEPER-122: Review BookKeeper server documentation (fpj & ivank)
+ 
+ BOOKKEEPER-130: Add developer KEYS file to svn (ivank)
 
  bookkeeper-server/
 
